# knowbase-core

./: .env  .gitignore  Cargo.toml  Makefile  README.md  compile_commands.json  knowbase-architecture.excalidraw  myfile
.github/workflows/: release.yml
include/: db.h  file_handler.h  models.h  tfidf.h
lsp/src/: lib.rs
src/: cli.rs  cli_handlers.rs  db.cpp  engine.rs  file_handler.cpp  file_handler.rs  file_handlers.rs  main.cpp  main.rs  markdown_parser.rs  models.rs  tfidf.cpp
src/cli/: cli.rs  cli_handlers.rs  mod.rs
todo/: Cargo.toml
todo/src/: lib.rs
todo/src/goals/: cli.rs  models.rs  storage.rs
todo/src/projects/: cli.rs  models.rs  storage.rs
todo/src/tasks/: cli.rs  models.rs  storage.rs
todo/src/utils/: enums.rs  mod.rs  monitoring.rs  notifications.rs  storage.rs
todo/src/utils/cli/: cli.rs  mod.rs  tools.rs
todo/src/utils/dialog/: cli.rs  zenity.rs
