[package]
name = "knowbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio", "tls-rustls"]}
aromatic = "0.1.0"
menva = "0.1.0"
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.74"
unidecode = "0.3.0"
regex = "1.10.2"
clap = { version = "4.4.13", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
itertools = "0.12.0"
rec_rsys = "1.0.0"
rayon = "1.8.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
