[package]
name = "knowbase"
version = "0.1.3"
edition = "2021"
description = "A knowledge manager"

[dependencies]
unidecode = "0.3.0"
regex = "1.10.2"
rayon = "1.8.1"
lsp = { version = "0.1.0", path = "./lsp" }
todo = { version = "0.1.0", path = "./todo" }
aromatic.workspace = true
sqlx.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
menva.workspace = true
async-trait.workspace = true
pulldown-cmark = "0.10.0"

[workspace.dependencies]
clap_complete = { version = "4.3.1" }
clap = { version = "4.5.0", features = ["derive","cargo","default", "env"] }
menva = "1.0.0"
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.74"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio", "tls-rustls"]}
aromatic = "0.1.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[workspace]
members = [
    "lsp",
    "todo",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

